[gd_scene load_steps=2 format=3 uid="uid://cta405o54sfdg"]

[ext_resource type="Script" path="res://scenes/ui/volume_controls.gd" id="1_422io"]

[node name="VolumeControls" type="GridContainer"]
offset_right = 254.0
offset_bottom = 36.0
theme_override_constants/h_separation = 4
columns = 2
script = ExtResource("1_422io")
theme_override_constants/h_separation = 4

[node name="LabelSound" type="Label" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 8
text = "Sound"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SliderSound" type="HSlider" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 0.75
tick_count = 9
ticks_on_borders = true

[node name="LabelMusic" type="Label" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 8
text = "Music
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SliderMusic" type="HSlider" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 0.75
tick_count = 9
ticks_on_borders = true

[connection signal="value_changed" from="SliderSound" to="." method="_on_slider_sound_value_changed"]
[connection signal="value_changed" from="SliderMusic" to="." method="_on_slider_music_value_changed"]
